[package]
name = "engage-cli"
version = "0.1.0"
edition = "2024"
description = "A minimalist CLI timer, clock, stopwatch, and Pomodoro tool for focused productivity."
license = "MIT"
repository = "https://github.com/greyngs/engage"
keywords = ["timer", "clock", "pomodoro", "cli", "terminal", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "engage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.27"
chrono = "0.4"
ratatui = "0.30.0"
tui-big-text = "0.8.1"
figlet-rs = "0.1.5"
